--- a/src/app/shared/components/product/product-box/product-box.component.html
+++ b/src/app/shared/components/product/product-box/product-box.component.html
@@ -115,7 +115,7 @@
       <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
       <!-- <a [routerLink]="['/shop/product/left/sidebar/', product?.title.replace(' ', '-')]"> -->
       <a href="javaScript:void(0);">
-        <h6>{{ productkart?.productName | titlecase }}</h6>
+        <h6>dfdf{{ productkart?.productName | titlecase }}</h6>
       </a>
 
       <h4 *ngIf="productkart?.setNo==0">
