--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -6,7 +6,7 @@
             <div class="col-sm-12">
                 <div class="error-section">
                     <h1>404</h1>
-                    <h2>page not found</h2>
+                    <h2>We couldn't find any matches!</h2>
                     <a [routerLink]="'/home/fashion'" class="btn btn-solid">back to home</a>
                 </div>
             </div>
