--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -87,7 +87,7 @@
                                 <label>Business Type</label><span style="color:red">*</span>
                                 <select class="custom-select" formControlName="BusinessType"
                                     [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
-                                    <option value=""></option>
+                                    <option value="">select</option>
                                     <option value="SoleProprietorship">Sole Proprietorship</option>
                                     <option value="Partnership">Partnership</option>
                                     <option value="PublicLimitedCompany">Public Limited Company</option>
@@ -102,7 +102,7 @@
                                 <label>Industry</label><span style="color:red">*</span>
                                 <select class="custom-select" formControlName="Industry"
                                     [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
-                                    <option value=""></option>
+                                    <option value="">select</option>
                                     <option value="Retail"> Retail (Fashion / Accessories)</option>
                                     <option value="Wholesale">Wholesale</option>
                                     <option value="Other">Other</option>
@@ -114,7 +114,7 @@
                                 <label>Business License Type</label><span style="color:red">*</span>
                                 <select class="custom-select" formControlName="businessLicenseType"
                                     [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
-                                    <option value=""></option>
+                                    <option value="">select</option>
                                     <option value="GSTIN"> Goods and Services Tax Identification Number (GSTIN)
                                     </option>
                                     <option value="BusinessPAN">Business PAN</option>
@@ -195,7 +195,7 @@
                                 <label>State</label><span style="color:red">*</span>
                                 <select class="custom-select" formControlName="state"
                                     [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
-                                    <option value=""></option>
+                                    <option value="">select</option>
                                     <option value="Andhra Pradesh">Andhra Pradesh</option>
                                     <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands
                                     </option>
