--- a/src/app/pages/account/register/register.component.scss
+++ b/src/app/pages/account/register/register.component.scss
@@ -18,24 +18,23 @@
     color: #646363;
 }
 
-// $num-of-char: 6;
-// $char-width: 3ch;
-// $gap: .3 * $char-width;
-// $in-w: $num-of-char * ($char-width + ($gap));
-
-// .register-page .theme-card .theme-form .inputOTP {
-// 	padding-right: 0;
-// 	display: block;
-// 	border: none;
-// 	width: $in-w;
-// 	background: repeating-linear-gradient(90deg, #000 0, #000 $char-width, transparent 0, transparent $char-width + $gap) 0 100%/ #{$in-w - $gap} 2px no-repeat;
-// 	letter-spacing: $gap*3.25;
-// 	font-size: $char-width;
-// 	margin: auto;
-// 	&:focus {
-// 		outline: none;
-// 	}
-// }
+// input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+//     color: transparent;
+//   }
+//   input[type="text"]::-moz-placeholder, input[type="password"]::-moz-placeholder { /* Firefox 19+ */
+//     color: transparent;
+//   }
+//   input[type="text"]:-ms-input-placeholder, input[type="password"]:-ms-input-placeholder { /* IE 10+ */
+//     color: transparent;
+//   }
+//   input[type="text"]:-moz-placeholder, input[type="password"]:-moz-placeholder { /* Firefox 18- */
+//     color: transparent;
+//   }
+.custom-select {
+    background-image: url(~/assets/images/icon/down-arrow.svg) ;
+    background-repeat: no-repeat;
+    background-position: center right 10px;
+}
 
 /* loading state */
 .btn-loading {
