--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -10,29 +10,40 @@
                         <div class="form-row">
                             <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                 <div class="field-label">New Password </div>
-                                <input type="password" class="form-control" name="NewPassword" [formControl]="ChangePwdForm.controls['NewPassword']" value="" placeholder="" autocomplete="off">
-                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.required" class="text text-danger">
+                                <input type="password" class="form-control" name="NewPassword"
+                                    [formControl]="ChangePwdForm.controls['NewPassword']" value="" placeholder=""
+                                    autocomplete="off">
+                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.required"
+                                    class="text text-danger">
                                     New Password is required.
                                 </div>
-                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.minlength" class="text text-danger">
+                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.minlength"
+                                    class="text text-danger">
                                     New Password must be greater than 7 character.
                                 </div>
                             </div>
                             <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                 <div class="field-label">Confirm Password </div>
-                                <input type="password" class="form-control" name="ConfirmPwd" [formControl]="ChangePwdForm.controls['ConfirmPwd']" value="" placeholder="" autocomplete="off">
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.required" class="text text-danger">
+                                <input type="password" class="form-control" name="ConfirmPwd"
+                                    [formControl]="ChangePwdForm.controls['ConfirmPwd']" value="" placeholder=""
+                                    autocomplete="off">
+                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.required"
+                                    class="text text-danger">
                                     Confirm Password is required.
                                 </div>
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.minlength" class="text text-danger">
+                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.minlength"
+                                    class="text text-danger">
                                     Confirm Password must be greater than 7 character.
                                 </div>
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && (ChangePwdForm.controls.NewPassword.value != ChangePwdForm.controls.ConfirmPwd.value)" class="text text-danger">
+                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && (ChangePwdForm.controls.NewPassword.value != ChangePwdForm.controls.ConfirmPwd.value)"
+                                    class="text text-danger">
                                     New Password must be same Confirm password.
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-solid" (click)="ResetPassword()">Submit</button>
+                        <p>
+                            <button style="margin-top: 23px;" class="btn btn-solid" (click)="ResetPassword()">Submit</button>
+                        </p>
                     </div>
                 </form>
             </div>
