--- a/src/app/Report/order-invoice/order-invoice.component.scss
+++ b/src/app/Report/order-invoice/order-invoice.component.scss
@@ -20,8 +20,8 @@ table span {
 }
 
 .invoice-container::before {
-    content: "SAMPLE";
-    font-size: 160pt;
+    content: "ORDER GENERATED BUT NOT PAID";
+    font-size: 50pt;
     position: absolute;
     left: 50pt;
     top: 280pt;
@@ -34,8 +34,8 @@ table span {
 }
 
 .invoice-container::after {
-    content: "SAMPLE";
-    font-size: 160pt;
+    content: "ORDER GENERATED BUT NOT PAID";
+    font-size: 50pt;
     position: absolute;
     left: 50pt;
     top: 700pt;
