--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div class=" text-center mt-4 font-weight-light">
-                            Already have an account? <a routerLink="/account/login" class="text-primary">Login</a>
+                            Already have an account? <a href="javaScript:void(0);" (click)="Login()" class="text-primary">Login</a>
                         </div>
 
                     </form>
